Долгое ожидание стим входа

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light" />
-    <title>Vite + React + TS</title>
+
+    <!-- DNS prefetch и preconnect для Steam для ускорения авторизации -->
+    <link rel="dns-prefetch" href="https://steamcommunity.com" />
+    <link rel="preconnect" href="https://steamcommunity.com" crossorigin />
+    <link rel="dns-prefetch" href="https://store.steampowered.com" />
+    <link rel="preconnect" href="https://store.steampowered.com" crossorigin />
+
+    <title>ChiBox</title>
   </head>
   <body>
     <div id="root"></div>
