--- a/index.html
+++ b/index.html
@@ -1,18 +1,62 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light" />
 
-    <!-- DNS prefetch и preconnect для Steam для ускорения авторизации -->
+    <!-- Primary Meta Tags -->
+    <title>ChiBox - Открывай кейсы CS2, выигрывай скины</title>
+    <meta name="title" content="ChiBox - Открывай кейсы CS2, выигрывай скины" />
+    <meta name="description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день. Лучшие шансы на редкие предметы." />
+    <meta name="keywords" content="CS2, кейсы, скины, CS2 кейсы, открыть кейс, выиграть скин, бесплатные кейсы, chibox, чибокс" />
+    <meta name="author" content="ChiBox" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://chibox-game.ru" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://chibox-game.ru" />
+    <meta property="og:title" content="ChiBox - Открывай кейсы CS2, выигрывай скины" />
+    <meta property="og:description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день." />
+    <meta property="og:image" content="https://chibox-game.ru/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:site_name" content="ChiBox" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://chibox-game.ru" />
+    <meta name="twitter:title" content="ChiBox - Открывай кейсы CS2, выигрывай скины" />
+    <meta name="twitter:description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день." />
+    <meta name="twitter:image" content="https://chibox-game.ru/og-image.jpg" />
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#1a1a2e" />
+    <meta name="msapplication-TileColor" content="#1a1a2e" />
+
+    <!-- Security Headers -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
+
+    <!-- DNS prefetch и preconnect для критических ресурсов -->
+    <link rel="dns-prefetch" href="https://chibox-game.ru" />
+    <link rel="preconnect" href="https://chibox-game.ru" crossorigin />
     <link rel="dns-prefetch" href="https://steamcommunity.com" />
     <link rel="preconnect" href="https://steamcommunity.com" crossorigin />
     <link rel="dns-prefetch" href="https://store.steampowered.com" />
     <link rel="preconnect" href="https://store.steampowered.com" crossorigin />
 
-    <title>ChiBox</title>
+    <!-- Preload критических ресурсов -->
+    <link rel="preload" href="/src/main.tsx" as="script" crossorigin />
+    <link rel="preload" href="/public/images/logo.png" as="image" />
   </head>
   <body>
     <div id="root"></div>
