--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="color-scheme" content="dark" />
 
     <!-- Primary Meta Tags -->
-    <title>ChiBox - Открывай кейсы CS2, выигрывай скины</title>
-    <meta name="title" content="ChiBox - Открывай кейсы CS2, выигрывай скины" />
+    <title>ChiBox - Делаем твой инвентарь лучше с каждым днём!</title>
+    <meta name="title" content="ChiBox - Открывай бесплатные ежедневные кейсы CS2 и выигрывай скины" />
     <meta name="description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день. Лучшие шансы на редкие предметы." />
     <meta name="keywords" content="CS2, кейсы, скины, CS2 кейсы, открыть кейс, выиграть скин, бесплатные кейсы, chibox, чибокс" />
     <meta name="author" content="ChiBox" />
@@ -17,7 +17,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://chibox-game.ru" />
-    <meta property="og:title" content="ChiBox - Открывай кейсы CS2, выигрывай скины" />
+    <meta property="og:title" content="ChiBox - " />
     <meta property="og:description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день." />
     <meta property="og:image" content="https://chibox-game.ru/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
@@ -28,7 +28,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://chibox-game.ru" />
-    <meta name="twitter:title" content="ChiBox - Открывай кейсы CS2, выигрывай скины" />
+    <meta name="twitter:title" content="ChiBox - Делаем твой инвентарь лучше с каждым днём!" />
     <meta name="twitter:description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день." />
     <meta name="twitter:image" content="https://chibox-game.ru/og-image.jpg" />
 
