--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://chibox-game.ru" />
     <meta property="og:title" content="ChiBox - " />
     <meta property="og:description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день." />
-    <meta property="og:image" content="https://chibox-game.ru/og-image.jpg" />
+    <meta property="og:image" content="https://chibox-game.ru/images/logo.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="ru_RU" />
@@ -30,7 +30,7 @@
     <meta name="twitter:url" content="https://chibox-game.ru" />
     <meta name="twitter:title" content="ChiBox - Делаем твой инвентарь лучше с каждым днём!" />
     <meta name="twitter:description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день." />
-    <meta name="twitter:image" content="https://chibox-game.ru/og-image.jpg" />
+    <meta name="twitter:image" content="https://chibox-game.ru/images/logo.png" />
 
     <!-- Favicons -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
