--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://chibox-game.ru" />
-    <meta property="og:title" content="ChiBox - " />
+    <meta property="og:title" content="ChiBox - Делаем твой инвентарь лучше с каждым днём!" />
     <meta property="og:description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день." />
-    <meta property="og:image" content="https://chibox-game.ru/images/logo.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image" content="https://chibox-game.ru/favicon-512x512.png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:site_name" content="ChiBox" />
 
@@ -30,9 +30,10 @@
     <meta name="twitter:url" content="https://chibox-game.ru" />
     <meta name="twitter:title" content="ChiBox - Делаем твой инвентарь лучше с каждым днём!" />
     <meta name="twitter:description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день." />
-    <meta name="twitter:image" content="https://chibox-game.ru/images/logo.png" />
+    <meta name="twitter:image" content="https://chibox-game.ru/favicon-512x512.png" />
 
     <!-- Favicons -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -56,10 +57,11 @@
 
     <!-- Preload критических ресурсов -->
     <link rel="preload" href="/src/main.tsx" as="script" crossorigin />
-    <link rel="preload" href="/public/images/logo.png" as="image" />
+    <link rel="preload" href="/images/logo.png" as="image" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
