--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <meta name="twitter:url" content="https://chibox-game.ru" />
     <meta name="twitter:title" content="ChiBox - Делаем твой инвентарь лучше с каждым днём!" />
     <meta name="twitter:description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день." />
-    <meta name="twitter:image" content="https://chibox-game.ru/favicon-512x512.png" />
+    <meta property="twitter:image" content="https://chibox-game.ru/favicon-512x512.png" />
 
     <!-- Favicons -->
-    <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" href="/favicon.ico?v=2" sizes="any" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#1a1a2e" />
     <meta name="msapplication-TileColor" content="#1a1a2e" />
@@ -64,4 +64,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
