--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <meta name="twitter:description" content="Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы, бонусы и мини-игры каждый день." />
     <meta property="twitter:image" content="https://chibox-game.ru/favicon-512x512.png" />
 
-    <!-- Favicons -->
-    <link rel="icon" href="/favicon.ico?v=2" sizes="any" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#1a1a2e" />
-    <meta name="msapplication-TileColor" content="#1a1a2e" />
+<!-- Favicons -->
+<link rel="icon" href="https://chibox-game.ru/favicon.ico?v=2" sizes="any" />
+<link rel="icon" type="image/png" sizes="32x32" href="https://chibox-game.ru/favicon-32x32.png?v=2" />
+<link rel="icon" type="image/png" sizes="16x16" href="https://chibox-game.ru/favicon-16x16.png?v=2" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://chibox-game.ru/apple-touch-icon.png?v=2" />
+<link rel="manifest" href="https://chibox-game.ru/manifest.json" />
+<meta name="theme-color" content="#1a1a2e" />
+<meta name="msapplication-TileColor" content="#1a1a2e" />
 
     <!-- Security Headers -->
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
